@@ -49,6 +49,23 @@ gtk_quit_add_full hidden="1"
 GtkRadioActionEntry is_value_type="1"
 GtkRequisition is_value_type="1"
 gtk_show_about_dialog ellipsis="1"
+GtkStyle.fg weak="0" is_array="1"
+GtkStyle.bg weak="0" is_array="1"
+GtkStyle.light weak="0" is_array="1"
+GtkStyle.dark weak="0" is_array="1"
+GtkStyle.mid weak="0" is_array="1"
+GtkStyle.text weak="0" is_array="1"
+GtkStyle.base weak="0" is_array="1"
+GtkStyle.text_aa weak="0" is_array="1"
+GtkStyle.fg_gc weak="0" is_array="1"
+GtkStyle.bg_gc weak="0" is_array="1"
+GtkStyle.light_gc weak="0" is_array="1"
+GtkStyle.dark_gc weak="0" is_array="1"
+GtkStyle.mid_gc weak="0" is_array="1"
+GtkStyle.text_gc weak="0" is_array="1"
+GtkStyle.base_gc weak="0" is_array="1"
+GtkStyle.text_aa_gc weak="0" is_array="1"
+GtkStyle.bg_pixmap weak="0" is_array="1"
 GtkTextBuffer::apply_tag has_emitter="1"
 GtkTextBuffer::begin_user_action has_emitter="1"
 GtkTextBuffer::end_user_action has_emitter="1"
