@@ -1,5 +1,12 @@
 2007-08-24  Jürg Billeter  <j@bitron.ch>
 
+	* vapigen/valagidlparser.vala, vapi/gtk+-2.0.vala,
+	  vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix array fields of
+	  Gtk.Style, fixes bug 463959
+	* vapi/glib-2.0.vala: add g_get_user_data_dir
+
+2007-08-24  Jürg Billeter  <j@bitron.ch>
+
 	* vapigen/valagidlparser.vala: recognize unsigned and unsigned-int types
 	* vapi/Makefile.am, vapi/libwnck-1.0.vala, vapi/packages/libwnck-1.0/:
 	  add libwnck bindings
